labeling-ui: fix style of jump-to-input-field

--- a/labeling-ui/Styles/main.scss
+++ b/labeling-ui/Styles/main.scss
@@ -181,6 +181,8 @@ div.viewer{
       border: none;
       background: transparent;
       display: inline;
+      height: auto;
+      vertical-align: initial;
     }
 
     input[type=number]:focus {
